--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "@dashevo/dashcore-node",
-  "description": "Full node with extended capabilities using Dashcore and Dash Core (dashd)",
+  "name": "@vpubevo/vpubcore-node",
+  "description": "Full node with extended capabilities using Vpubcore and Vpub Core (vpubd)",
   "author": "BitPay <dev@bitpay.com>",
   "version": "4.0.0",
   "main": "./index.js",
-  "repository": "git://github.com/dashevo/dashcore-node.git",
-  "homepage": "https://github.com/dashevo/dashcore-node",
+  "repository": "git://github.com/vpubchain/vpubcore-node.git",
+  "homepage": "https://github.com/vpubchain/vpubcore-node.git",
   "bugs": {
-    "url": "https://github.com/dashevo/dashcore-node/issues"
+    "url": "https://github.com/vpubchain/vpubcore-node/issues"
   },
   "contributors": [
     {
@@ -27,7 +27,7 @@
     }
   ],
   "bin": {
-    "dashcore-node": "./bin/dashcore-node"
+    "vpubcore-node": "./bin/vpubcore-node"
   },
   "scripts": {
     "test": "mocha -R spec --recursive",
@@ -36,15 +36,15 @@
     "coverage": "istanbul cover _mocha -- --recursive",
     "coveralls": "./node_modules/.bin/istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- --recursive -R spec && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js",
     "mocha": "./node_modules/.bin/mocha",
-    "dashd_test": "./node_modules/.bin/mocha test/services/dashd.unit.js"
+    "vpubd_test": "./node_modules/.bin/mocha test/services/vpubd.unit.js"
   },
   "tags": [
-    "dash",
-    "dashd"
+    "vpub",
+    "vpubd"
   ],
   "dependencies": {
-    "@dashevo/dashcore-lib": "^0.15.5",
-    "@dashevo/dashd-rpc": "^1.0.1",
+    "@vpubevo/vpubcore-lib": "^0.15.5",
+    "@vpubevo/vpubd-rpc": "^1.0.1",
     "async": "^1.3.0",
     "body-parser": "^1.13.3",
     "colors": "^1.1.2",
@@ -66,7 +66,7 @@
   },
   "devDependencies": {
     "benchmark": "1.0.0",
-    "@dashevo/dashcore-p2p": "^1.1.6",
+    "@vpubevo/vpubcore-p2p": "^1.1.6",
     "chai": "^3.5.0",
     "coveralls": "^2.11.9",
     "istanbul": "^0.4.3",
